--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,34 @@ html, body {
 margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
 body {
 font-family: 'Roboto', sans-serif;
 color: #434455;
 background-color:#FFF;
+}
+
+.container {
+    width: 1158px;
+}
+
+.section {
+padding: 120px;
 }
 
 ul,
@@ -17,11 +41,22 @@ a {
 text-decoration: none;
 }
 
-.header {
-background-color: #FFF;
+img {
+    display: block;
 }
 
-.header-navigation {}
+.header {
+background-color: #FFF;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
+border-bottom: 1px solid #E7E9FC;
+}
+
+.header-navigation {
+display: flex;
+}
 
 .header-logo {
 color: #4d5ae5;
@@ -32,12 +67,16 @@ font-size: 18px;
 font-weight: 700;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-left: 156px;
 }
 
 .header-logo-color {
 color: #2e2f42;
 }
-.header-menu-list {}
+.header-menu-list {
+        display: flex;
+        gap: 40px;
+}
 
 .header-menu-item {}
 
@@ -57,7 +96,10 @@ line-height: 1.5;
 
 .author-address {}
 
-.address-list {}
+.address-list {
+        display: flex;
+        gap:40px;
+}
 
 address {
     font-style: normal;
@@ -71,6 +113,12 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
+
+display: flex;
+height: 72px;
+justify-content: center;
+align-items: center;
+flex-shrink: 0;
 }
 
 .address-item:hover,
@@ -80,6 +128,9 @@ color: #404bbf;
 
 .main-page {
 background: #2E2F42;
+width: 1440px;
+flex-shrink: 0;
+padding: 188px 472px;
 }
 
 .main-page-title {
@@ -102,6 +153,12 @@ font-style: normal;
 font-weight: 500;
 letter-spacing: 0.04em;
 line-height: 1.5;
+border-radius: 4px;
+display: inline-flex;
+padding: 16px 32px;
+align-items: flex-start;
+gap: 10px;
+margin-top: 48px;
 }
 
 .main-page-btn:hover {
@@ -116,9 +173,19 @@ background-color: #404BBF;
 
 .visually-hidden {}
         
-.feature-list {}
+.feature-list {
+    display: flex;
+    gap:24px;
+    padding: 120px 156px;
+}
         
-.feature-item {}
+.feature-item {
+    display: flex;
+        width: 264px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+}
 
 .feature-subtitle {
 color: #2E2F42;
@@ -138,7 +205,10 @@ line-height: 1.5;
 }
 
 .team {
-    background-color: #F4F4FD;
+background-color: #F4F4FD;
+width: 1440px;
+height: 732px;
+flex-shrink: 0;
 }
 
 .team-subtitle {
@@ -152,7 +222,10 @@ letter-spacing: 0.02em;
 line-height: 1.11;
 }
 
-.team-list {}
+.team-list {
+    display: flex;
+    gap: 24px;
+}
 
 .team-item {
 background:  #FFF;
@@ -195,11 +268,22 @@ letter-spacing: 0.02em;
 line-height: 1.11;
 }
 
-.portfolio-list {}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .portfolio-item {
 border: #E7E9FC;
 background: #FFF;
+display: flex;
+    width: 360px;
+    height: 420px;
+    padding-bottom: 0px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    flex-shrink: 0;
 }
 
 .portfolio-image {
