--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,31 @@
 html, body {
 margin: 0;
+box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin: 0;
+p, h1, h2, h3, h4, h5, h6 {
+margin-top: 0;
+margin-bottom: 0;
 }
 
-ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
+ul, p {
+margin-top: 0;
+margin-bottom: 0;
+padding-left: 0;
+list-style: none;
+}
+
+a {
+text-decoration: none;
+color: currentColor;
+}
+
+img {
+    display: block;
+}
+
+address {
+    font-style: normal;
 }
 
 body {
@@ -25,37 +35,32 @@ background-color:#FFF;
 }
 
 .container {
-    width: 1158px;
+width: 1158px;
 }
 
 .section {
-padding: 120px;
-}
-
-ul,
-ol {
-list-style: none;
-}
-
-a {
-text-decoration: none;
-}
-
-img {
-    display: block;
 }
 
 .header {
 background-color: #FFF;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-shrink: 0;
 border-bottom: 1px solid #E7E9FC;
+display: flex;
+}
+
+.hero {
+padding-top: 25.5px;
+padding-bottom: 25.5px;
+padding-left: 156px;
+display: inline-flex;
+align-items: flex-start;
+text-align: center;
 }
 
 .header-navigation {
-display: flex;
+display: inline-flex;
+align-items: flex-start;
+gap: 40px;
+margin-right: auto;
 }
 
 .header-logo {
@@ -67,15 +72,16 @@ font-size: 18px;
 font-weight: 700;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-margin-left: 156px;
 }
 
 .header-logo-color {
 color: #2e2f42;
 }
+
 .header-menu-list {
-        display: flex;
-        gap: 40px;
+display: flex;
+align-items: flex-start;
+gap: 40px;
 }
 
 .header-menu-item {}
@@ -97,12 +103,13 @@ line-height: 1.5;
 .author-address {}
 
 .address-list {
-        display: flex;
-        gap:40px;
+display: flex;
+gap: 40px;
+
 }
 
-address {
-    font-style: normal;
+.address {
+
 }
 
 .address-item {
@@ -113,12 +120,6 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
-
-display: flex;
-height: 72px;
-justify-content: center;
-align-items: center;
-flex-shrink: 0;
 }
 
 .address-item:hover,
@@ -128,9 +129,10 @@ color: #404bbf;
 
 .main-page {
 background: #2E2F42;
-width: 1440px;
+width: 1158px;
 flex-shrink: 0;
-padding: 188px 472px;
+height: 600px;
+padding: 188px auto;
 }
 
 .main-page-title {
@@ -141,6 +143,10 @@ font-size: 56px;
 font-weight: 700;
 letter-spacing: 0.02em;
 line-height: 1.07;
+max-width: 496px;
+margin: 0 auto;
+margin-bottom: 48px;
+padding-top: 188px;
 }
 
 .main-page-btn {
@@ -158,7 +164,8 @@ display: inline-flex;
 padding: 16px 32px;
 align-items: flex-start;
 gap: 10px;
-margin-top: 48px;
+margin: 0 auto;
+display: block;
 }
 
 .main-page-btn:hover {
@@ -180,11 +187,11 @@ background-color: #404BBF;
 }
         
 .feature-item {
-    display: flex;
-        width: 264px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 8px;
+box-sizing: border-box;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 8px;
 }
 
 .feature-subtitle {
@@ -206,7 +213,7 @@ line-height: 1.5;
 
 .team {
 background-color: #F4F4FD;
-width: 1440px;
+width: 1158px;
 height: 732px;
 flex-shrink: 0;
 }
@@ -277,13 +284,14 @@ line-height: 1.11;
 border: #E7E9FC;
 background: #FFF;
 display: flex;
-    width: 360px;
-    height: 420px;
-    padding-bottom: 0px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
+width: 360px;
+height: 420px;
+padding-bottom: 0px;
+flex-direction: column;
+align-items: flex-start;
+gap: 32px;
+flex-shrink: 0;
+border-bottom:1px solid #E7E9FC;
 }
 
 .portfolio-image {
