--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ width: 1158px;
 }
 
 .section {
+padding-top: 120px;
+padding-bottom: 120px;
 }
 
 .header {
@@ -129,8 +131,8 @@ color: #404bbf;
 background: #2E2F42;
 width: 1158px;
 flex-shrink: 0;
-height: 600px;
-padding: 188px auto;
+padding-top: 188px;
+padding-bottom: 188px;
 }
 
 .main-page-title {
@@ -144,7 +146,6 @@ line-height: 1.07;
 max-width: 496px;
 margin: 0 auto;
 margin-bottom: 48px;
-padding-top: 188px;
 }
 
 .main-page-btn {
@@ -215,12 +216,12 @@ line-height: 1.5;
 .team {
 background-color: #F4F4FD;
 width: 1158px;
-height: 732px;
 flex-shrink: 0;
 }
 
 .team-container{
     padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .team-subtitle {
@@ -295,6 +296,7 @@ background-color: #FFF;
 
 .portfolio-container {
 margin: 0 auto;
+padding-bottom: 120px;
 }
 
 .portfolio-title {
@@ -315,7 +317,6 @@ flex-wrap: wrap;
 padding-top: 72px;
 width: calc((100% - 48px)) / 6;
 gap: 48px 24px;
-margin-bottom: 120px;
 }
 
 .portfolio-item {
@@ -323,7 +324,6 @@ border: #E7E9FC;
 background: #FFF;
 display: flex;
 width: 360px;
-height: 420px;
 padding-bottom: 0px;
 flex-direction: column;
 align-items: flex-start;
@@ -366,7 +366,6 @@ line-height: 1.5;
 
 .footer {
 background: #2E2F42;
-height: 312px;
     flex-shrink: 0;
 }
 
