--- a/css/styles.css
+++ b/css/styles.css
@@ -51,12 +51,14 @@ background-color: #FFF;
 border-bottom: 1px solid #E7E9FC;
 display: flex;
 width: 1158px;
+padding-top: 25.5px;
+    padding-bottom: 25.5px;
+    padding-left: 156px;
 }
 
 .hero {
-padding-top: 25.5px;
-padding-bottom: 25.5px;
-padding-left: 156px;
+padding-left: 15px;
+padding-right: 15px;
 display: inline-flex;
 align-items: flex-start;
 text-align: center;
