--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,8 @@ border-bottom: 1px solid #E7E9FC;
 display: flex;
 width: 1158px;
 padding-top: 25.5px;
-    padding-bottom: 25.5px;
-    padding-left: 156px;
+padding-bottom: 25.5px;
+padding-left: 156px;
 }
 
 .hero {
@@ -62,6 +62,7 @@ padding-right: 15px;
 display: inline-flex;
 align-items: flex-start;
 text-align: center;
+width: 1158px;
 }
 
 .header-navigation {
